// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#sprockets/components/group <Group /> With additional props renders 1`] = `
<fieldset
  className="group"
  onChange={[MockFunction]}
/>
`;

exports[`#sprockets/components/group <Group /> With required props renders 1`] = `
<fieldset
  className="group"
  onChange={[Function]}
/>
`;
